# onboardapis

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  docs.yml  publish-github-release.yml  publish-to-pypi.yml  publish.yml
docs/: conf.py  getting_started.rst  index.rst  installation.rst  package_documentation.rst  requirements.txt
docs/source/: modules.rst  onboardapis.rst  onboardapis.trains.austria.rst  onboardapis.trains.germany.rst  onboardapis.trains.rst  onboardapis.utils.rst
examples/train/de/db/: iceportal.py
onboardapis/: __init__.py  __init__.pyi  conversions.py  data.py  data.pyi  exceptions.py  exceptions.pyi  mixins.py  protocols.py  types.py  units.py
onboardapis/bus/: __init__.py
onboardapis/other/: NAMESPACE.txt  __init__.py
onboardapis/plane/: __init__.py  cib.py  mbu.py  tvl.py  tvs.py  wif.py
onboardapis/plane/cfg/: apis.py  interfaces.py
onboardapis/plane/cz/: __init__.py  tvq.py  tvs.py
onboardapis/plane/de/: __init__.py
onboardapis/plane/de/cfg/: __init__.py  apis.py  interfaces.py
onboardapis/plane/ee/: __init__.py  mbu.py
onboardapis/plane/no/: __init__.py  wif.py
onboardapis/ship/: __init__.py
onboardapis/train/: __init__.py  all.py
onboardapis/train/at/: __init__.py
onboardapis/train/at/obb/: __init__.py  apis.py  connectors.py  interfaces.py
onboardapis/train/austria/: oebb.py
onboardapis/train/austria/oebb/: apis.py  connectors.py
onboardapis/train/cz/: __init__.py
onboardapis/train/cz/cd/: __init__.py  apis.py  interfaces.py  schema.py
onboardapis/train/de/: __init__.py
onboardapis/train/de/bth/: __init__.py
onboardapis/train/de/db/: __init__.py  apis.py  connectors.py  interfaces.py  mappings.py  mappings.yaml
onboardapis/train/de/flix/: __init__.py  apis.py  connectors.py  interfaces.py
onboardapis/train/de/me/: __init__.py  apis.py  connectors.py  interfaces.py
onboardapis/train/de/tdh/: __init__.py  apis.py
onboardapis/train/fr/: __init__.py
onboardapis/train/fr/sncf/: __init__.py  apis.py  interfaces.py
onboardapis/train/france/: sncf.py
onboardapis/train/france/sncf/: apis.py  connectors.py
onboardapis/train/germany/: db.py  flx.py
onboardapis/train/germany/db/: apis.py  connectors.py
onboardapis/train/germany/flx/: apis.py  connectors.py
onboardapis/train/it/: __init__.py
onboardapis/train/it/ti/: __init__.py  apis.py  interfaces.py
onboardapis/train/italy/ti/: __init__.py  apis.py  connectors.py
onboardapis/trains/: __init__.py
onboardapis/trains/austria/: oebb.py
onboardapis/trains/france/: sncf.py
onboardapis/trains/germany/: db.py  flx.py
onboardapis/utils/: conversions.py  data.py
