[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onboardapis"
description = "A pure Python wrapper for the on-board APIs of many different transportation providers."
version = "2.0.0"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
keywords = [
    "public-transport",
    "train",
    "api",
]
license = { text = "MIT" }
authors = [
    { name = "Felix Zenk", email = "felix.zenk@web.de" },
]
dependencies = [
    "geopy>=2.4.1",
    "gql[all]>=3.5.0",
    "restfly>=1.4.7",
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
    "deprecation>=2.1.0",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "flake8>=7.0.0",
    "Flake8-pyproject>=1.2.3",
    "pdoc>=14.4.0",
    "build>=1.2.1",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
]

[project.urls]
Homepage = "https://felix-zenk.github.io/onboardapis"
Documentation = "https://felix-zenk.github.io/onboardapis/"
Repository = "https://github.com/felix-zenk/onboardapis"
Issues = "https://github.com/felix-zenk/onboardapis/issues"

[tool.setuptools.packages.find]
include = ["onboardapis", "onboardapis.*"]

[tool.setuptools.package-data]
onboardapis = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.flake8]
max-line-length = 120
